# godot-kotlin-jvm

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  SConstruct  SCsub  TODO.md  TRULY_SWITCH_TO_GODOT_JVM.md  build.gradle.kts  build_profile.json  config.py  generate_templates.py  git.patch  install_vulkan_sdk_macos.sh  jitpack.yaml  regen_protos.sh  register_types.cpp  register_types.h  requirements.txt  settings.gradle.kts  versionBumpGuide.txt
.github/workflows/: assemble_android.yml  assemble_export_templates.yml  assemble_ios.yml  assemble_linux.yml  assemble_macos.yml  assemble_windows.yml  benchmark_windows.yml  build_android.yml  build_ios.yml  build_jvm.yml  build_linux.yml  build_macos.yml  build_windows.yml  builds_android.yml  builds_ios.yml  builds_jvm.yml  builds_linux.yml  builds_macos.yml  builds_windows.yml  check-pr-engine-editor-debug-and-tests.yaml  check-pr-engine-editor-debug.yaml  check-pr-engine-editor-release.yaml  check-pr-engine-export-template-debug.yaml  check-pr-engine-export-template-release.yaml  check-pr-engine.yaml  check-pr-entry-generator.yaml  check-pr-godot-kotlin-symbol-processor.yaml  check-pr-intellij-plugin.yaml  check-pr-jvm-godot-bootstrap.yaml  check-pr-jvm-godot-library.yaml  check-pr-jvm-gradle-plugin.yaml  cleanup_cache.yml  create-draft-release.yaml  deploy-docs.yaml  deploy-export-template-debug.yaml  deploy-export-template-release.yaml  deploy-export-template.yaml  deploy-godot-annotation-processor.yaml  deploy-godot-build-props.yaml  deploy-godot-editor-release.yaml  (+41 more)
api-generator/: build.gradle.kts  settings.gradle.kts
backup/workflows/: check-pr-engine-editor-release.yaml  publish.yaml
build-logic/: settings.gradle.kts
common/: settings.gradle.kts
docs/: .gitignore  README.md  SUMMARY.md  build.sh  mkdocs.yml  requirements.txt  run.sh
entry-generation/godot-class-graph-symbol-processor/: build.gradle.kts
godot-library/godot-coroutine-library/: build.gradle.kts
godot-library/godot-internal-library/: build.gradle.kts
graal/: jniconfig.json
harness/: .gitignore
harness/benchmarks/: .gitignore  README.md  build.gradle.kts  godot-project.csproj  godot-project.sln  godot_kotlin_configuration.json  gradle.properties  icon.png.import  project.godot  settings.gradle.kts
harness/bunnymark/: .gitignore  (+14 more)
kt/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
protos/: wire.proto
src/: BridgesManager.cpp  BridgesManager.h  SharedBuffer.cpp  SharedBuffer.h  bootstrap.cpp  bootstrap.h  bridges_manager.cpp  bridges_manager.h  class_loader.cpp  class_loader.h  constants.h  constraints.h  gd_kotlin.cpp  gd_kotlin.h  gd_kotlin_configuration.cpp  gd_kotlin_configuration.h  gd_print_glue.cpp  gd_print_glue.h  gdj_resource_format_loader.cpp  gdj_resource_format_loader.h  godot-jvm.cpp  godot_jvm.h  godotkotlin_defs.h  jar_path_provider.cpp  jar_path_provider.h  java_instance_wrapper.cpp  java_instance_wrapper.h  java_singleton_wrapper.h  jni_initializer.h  jni_lifecycle_manager.cpp  jni_lifecycle_manager.h  jvm_config.cpp  jvm_config.h  kotlin_callable_custom.h  kotlin_editor_export_plugin.cpp  kotlin_editor_export_plugin.h  kotlin_instance.cpp  kotlin_instance.h  kotlin_language.cpp  kotlin_language.h  (+53 more)
(+4550 files in other folders)
